# cpp_forth

./: CMakeLists.txt  LICENSE.md  README.md
include/: interpreter.h
src/: main.cpp
tests/: tests.cpp
